--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ The default odd track length is for Kuopio-halli.
 
     <script>
         let track_length = 337;
-        let time = 12 * 60; // 12 min
+        let time = 12 * 60; // 12 min in seconds
         let lap_time = 0;
         let lap_times = [];
         let last_lap_time = time;
