--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 predicting the run distance of the 12 min Cooper test, optimized for mobile use.
 The default odd track length is for Kuopio-halli. 
 -->
+<!DOCTYPE html>
 <html>
 <head>
     <title>Cooper test distance predictor</title>
     <style>
         body {
             text-align: center;
-			font-size: 4vw;
+            font-size: 4vw;
             font-family: Arial, Helvetica, sans-serif;
+            margin: 0 2em;
+            padding: 0;
+            box-sizing: border-box;
         }
         #lap-list {
             list-style-type: decimal;
@@ -17,33 +21,53 @@ The default odd track length is for Kuopio-halli.
             display: inline-block;
             text-align: left;
         }
-		
-		#lap-list li span {
-			margin-left: 10px;
-		}
-		button {
-			-webkit-appearance: none;
-			font-size: 1em;
-			padding: 1.2em 1.2em;
-			color: #000;
+        #lap-list li span {
+            margin-left: 10px;
+        }
+        button {
+            -webkit-appearance: none;
+            font-size: 1em;
+            padding: 1.2em 1.2em;
+            color: #000;
             font-family: inherit;
-		}
-		#timer {
-			font-size: 2em;
-		
-		}
-		#lap-timer {
-			font-size: 1em;
-		
-		}
-		#track-length {
-			font-size: 1em;
-			width: 13%;
-		}
+        }
+        #timer {
+            font-size: 2em;
+        }
+        #lap-timer {
+            font-size: 1em;
+        }
+        #track-length {
+            font-size: 1em;
+            width: 16%;
+        }
+        @media (min-width: 400px) {
+            body {
+                width: 300px;
+                margin: 0 auto;
+                font-size: 1em;
+            }
+            #lap-list {
+                font-size: 1em;
+            }
+            #timer {
+                font-size: 2em;
+            }
+            #lap-timer {
+                font-size: 1em;
+            }
+            button {
+                font-size: 1em;
+            }
+            #track-length {
+                font-size: 1em;
+            }
+        }
     </style>
+    
 </head>
 <body>
-    <h1>Cooper test distance estimator</h1>
+    <h2>Cooper test distance estimator</h2>
     Start the timer and press Lap +1 on each full lap. Shows you the estimated final result of the runner. Measure the last incomplete lap distance and add that to full laps. Optimized for mobile devices.<br><br>
     <label for="track-length">Track length (m): </label>
     <input type="number" id="track-length" value="337"><br><br>
