--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ The default odd track length is for Kuopio-halli.
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cooper test distance predictor</title>
     <style>
         body {
