--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ The default odd track length is for Kuopio-halli.
 </head>
 <body>
     <h2>Cooper test distance estimator</h2>
-    Start the timer and press Lap +1 on each full lap. Shows you the estimated final result of the runner. Measure the last incomplete lap distance and add that to full laps. Optimized for mobile devices.<br><br>
+    Start the timer and press Lap +1 on each full lap. Shows you the estimated final result of the runner. Measure the last incomplete lap distance and add that to full laps.<br><br>
     <label for="track-length">Track length (m): </label>
     <input type="number" id="track-length" value="337"><br><br>
 
